[package]
name = "nix-spect"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = [ "cargo" ] }
crossterm = "0.25.0"
tui = { version = "0.19.0", features = [ "crossterm" ] }

failure = "0.1"
rand = "0.8"